# fs-apps

./: .gitignore  CLAUDE.md  Cargo.toml  package.toml
.github/workflows/: ci.yml
crates/fs-ai/: Cargo.toml  build.rs  package.toml
crates/fs-ai/proto/: ai.proto  ai_app.proto
crates/fs-ai/src/: app.rs  cli.rs  controller.rs  grpc.rs  lib.rs  main.rs  model.rs  rest.rs  view.rs
crates/fs-bots/: Cargo.toml  build.rs  package.toml
crates/fs-bots/proto/: bots.proto
crates/fs-bots/src/: accounts_view.rs  app.rs  bot_strategy.rs  broadcast_view.rs  cli.rs  components.rs  context.rs  controller.rs  gatekeeper_view.rs  groups_view.rs  grpc.rs  lib.rs  main.rs  model.rs  rest.rs  view.rs  view_trait.rs
crates/fs-bots/tests/: bot_test.rs
crates/fs-browser/: Cargo.toml
crates/fs-browser/src/: app.rs  bookmarks.rs  lib.rs  model.rs  search_engine.rs
crates/fs-builder/: Cargo.toml  build.rs  package.toml
crates/fs-builder/assets/i18n/: de.toml
crates/fs-builder/proto/: builder_app.proto
crates/fs-builder/src/: app.rs  cli.rs  container_builder.rs  controller.rs  grpc.rs  i18n_editor.rs  lib.rs  main.rs  model.rs  rest.rs  view.rs
crates/fs-container-app/: Cargo.toml
crates/fs-container-app/src/: app.rs  controller.rs  grpc.rs  lib.rs  log_viewer.rs  main.rs  model.rs  rest.rs  service_detail.rs  service_list.rs  status.rs
crates/fs-lenses/: Cargo.toml
crates/fs-lenses/src/: app.rs  lib.rs  main.rs  model.rs  query.rs
crates/fs-managers/: Cargo.toml  package.toml
crates/fs-managers/src/: container_panel.rs  cursor_panel.rs  icons_panel.rs  language_panel.rs  lib.rs  main.rs  manager_view.rs  package_type_display.rs  picker_panel.rs  theme_panel.rs  view_model.rs
crates/fs-store-app/: Cargo.toml  package.toml
crates/fs-store-app/assets/i18n/: de.toml  en.toml
crates/fs-store-app/src/: app.rs  browser.rs  install_wizard.rs  installed_list.rs  lib.rs  main.rs  missing_icon.rs  node_package.rs  package_card.rs  package_detail.rs  store_settings.rs
crates/fs-tasks/: Cargo.toml
crates/fs-tasks/src/: app.rs  lib.rs  main.rs  model.rs  rest.rs  view.rs
crates/fs-theme-app/: Cargo.toml  build.rs  package.toml
crates/fs-theme-app/proto/: theme_app.proto
crates/fs-theme-app/src/: app.rs  chrome_view.rs  colors_view.rs  controller.rs  cursor_view.rs  grpc.rs  lib.rs  main.rs  rest.rs  theme_cli.rs  themes_view.rs
